k8s/stg/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: express-k8s-demo
  namespace: production
spec: 
  selector:
    app: express-k8s-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
